--- a/files/configs/GTSRB_CBM_config.yaml
+++ b/files/configs/GTSRB_CBM_config.yaml
@@ -31,6 +31,11 @@ concept_predictor:
     scheduler_params: 
         T_max: 10
         eta_min: 0
+    fuzzy_loss:
+        use_fuzzy_loss: True
+        fuzzy_lambda: 0.5
+        custom_rules:
+            - c1_should_be_close_to_c2
 label_predictor:
     lr: 0.001
     epochs: 2
