[Model] Enhance CustomFuzzyLoss to track last standard and fuzzy losses, and individual rule losses for improved logging

--- a/files/configs/GTSRB_CBM_config.yaml
+++ b/files/configs/GTSRB_CBM_config.yaml
@@ -39,7 +39,9 @@ concept_predictor:
                 "class": "ExactlyOneShape",
                 "lambda": 0.5, 
                 "operators": {
+                    # these operators must always be defined‚
                     "t_norm": "godel_t_norm",
+                    't_conorm': 'godel_t_conorm',
                     "a_aggregation": "godel_a_aggregation",
                     "e_aggregation": "godel_e_aggregation",
                 },
