--- a/files/configs/GTSRB_CBM_config.yaml
+++ b/files/configs/GTSRB_CBM_config.yaml
@@ -16,13 +16,15 @@ dataset:
     concepts_file: ../data/raw/GTSRB/concepts/concepts_per_class.csv
 concept_predictor:
     lr: 0.001
-    epochs: 1
+    epochs: 3
     lr_step: 10
     lr_gamma: 0.5
     early_stopping_patience: 15
     momentum: 0.9
     weight_decay: 5e-4
     checkpoint_dir: files/models
+    freeze: False
+    pretrained_weights: null
     criterion: bce_with_logits
     optimizer: sgd
     scheduler: cosine_annealing
@@ -55,6 +57,8 @@ label_predictor:
     momentum: 0.9
     weight_decay: 5e-4
     checkpoint_dir: files/models
+    freeze: False
+    pretrained_weights: null
     criterion: cross_entropy
     optimizer: adam
     scheduler: reduce_on_plateau
