--- a/files/configs/GTSRB_CBM_config.yaml
+++ b/files/configs/GTSRB_CBM_config.yaml
@@ -2,7 +2,7 @@ seed: 42
 device: cuda
 device_no: 1
 print_freq: 30
-log_dir: runs/default
+output_dir: experiments
 dataset:
     name: gtsrb
     n_labels: 43
@@ -15,6 +15,8 @@ dataset:
     val_split: 0.8
     concepts_file: ../data/raw/GTSRB/concepts/concepts_per_class.csv
 concept_predictor:
+    log_dir: logs
+    checkpoint_dir: models
     lr: 0.001
     epochs: 3
     lr_step: 10
@@ -22,7 +24,6 @@ concept_predictor:
     early_stopping_patience: 15
     momentum: 0.9
     weight_decay: 5e-4
-    checkpoint_dir: files/models
     freeze: False
     pretrained_weights: null
     criterion: bce_with_logits
@@ -49,6 +50,8 @@ concept_predictor:
                         - 2
                         - 3
 label_predictor:
+    log_dir: logs
+    checkpoint_dir: models
     lr: 0.001
     epochs: 2
     lr_step: 10
@@ -56,7 +59,6 @@ label_predictor:
     early_stopping_patience: 15
     momentum: 0.9
     weight_decay: 5e-4
-    checkpoint_dir: files/models
     freeze: False
     pretrained_weights: null
     criterion: cross_entropy
