--- a/files/configs/GTSRB_CBM_config.yaml
+++ b/files/configs/GTSRB_CBM_config.yaml
@@ -34,7 +34,61 @@ concept_predictor:
         eta_min: 0
     fuzzy_loss:
         use_fuzzy_loss: True
-        rules: 
+        rules:
+            at_most_one_border_colour:
+                rule: AtMostOneBorderColour
+                fuzzy_lambda: 0.5 
+                operators:
+                    t_norm:
+                        class_name: yager_t_norm
+                        params:
+                            p: 2.0
+                            eps: 1e-6
+                    t_conorm:
+                        class_name: yager_t_conorm
+                        params:
+                            p: 2.0
+                            eps: 1e-6
+                    a_aggregation:
+                        class_name: log_product_a_aggregation
+                        params:
+                            eps: 1e-8
+                    e_aggregation:
+                        class_name: generalized_mean_e_aggregation
+                        params:
+                            p: 2.0
+                params: 
+                    border_colour_indices:
+                        - 4
+                        - 5
+            exactly_one_main_colour:
+                rule: ExactlyOneMainColour
+                fuzzy_lambda: 0.5 
+                operators:
+                    t_norm:
+                        class_name: yager_t_norm
+                        params:
+                            p: 2.0
+                            eps: 1e-6
+                    t_conorm:
+                        class_name: yager_t_conorm
+                        params:
+                            p: 2.0
+                            eps: 1e-6
+                    a_aggregation:
+                        class_name: log_product_a_aggregation
+                        params:
+                            eps: 1e-8
+                    e_aggregation:
+                        class_name: generalized_mean_e_aggregation
+                        params:
+                            p: 2.0
+                params: 
+                    main_colour_indices:
+                        - 0
+                        - 1
+                        - 2
+                        - 3
             exactly_one_shape:
                 rule: ExactlyOneShape
                 fuzzy_lambda: 0.5 
@@ -56,7 +110,7 @@ concept_predictor:
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 3.0
+                            p: 2.0
                 params: 
                     shape_indices:
                         - 6
