--- a/files/configs/GTSRB_CBM_config_optimal.yaml
+++ b/files/configs/GTSRB_CBM_config_optimal.yaml
@@ -1,6 +1,6 @@
 seed: 42
 device: cuda
-device_no: 0
+device_no: 1
 print_freq: 30
 output_dir: experiments
 dataset:
@@ -17,11 +17,11 @@ dataset:
 concept_predictor:
     log_dir: logs
     checkpoint_dir: models
-    lr: 0.001
+    lr: 0.000326512276580663
     epochs: 30
     lr_step: 10
     lr_gamma: 0.5
-    early_stopping_patience: 3
+    early_stopping_patience: 5
     momentum: 0.9
     weight_decay: 5e-4
     freeze: False
@@ -37,203 +37,203 @@ concept_predictor:
         rules:
             at_most_one_border_colour:
                 rule: AtMostOneBorderColour
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.2767123443140712 
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 6.975621467979743
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 6.975621467979743
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 6.975621467979743
                 params: 
                     border_colour_indices: [4,5]
             exactly_one_main_colour:
                 rule: ExactlyOneMainColour
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.11467269976530323
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 28.358617267362543
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 28.358617267362543
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 28.358617267362543
                 params: 
                     main_colour_indices: [0,1,2,3]
             exactly_one_shape:
                 rule: ExactlyOneShape
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.03914418548169125
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 18.88789387764924
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 18.88789387764924
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 18.88789387764924
                 params: 
                     shape_indices: [6,7,8,9]
             between_two_and_three_numbers:
                 rule: BetweenTwoAndThreeNumbers
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.30335313021974797 
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 21.35064143109472
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 21.35064143109472
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 21.35064143109472
                 params: 
                     number_indices: [10,11,12,13,14,15,16,17]
             at_most_one_warning:
                 rule: AtMostOneWarning
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.3728697108227518
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 13.797321794129703
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 13.797321794129703
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 13.797321794129703
                 params: 
                     warning_indices: [21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
             no_symbols_exactly_two_colours:
                 rule: NoSymbolsExactlyTwoColours
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.29203556494491695 
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 25.112765393057202
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 25.112765393057202
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 25.112765393057202
                 params: 
                     symbol_indices: [18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42]
                     colour_indices: [0, 1, 2, 3, 4, 5]
             warning_sign_exclusivity:
                 rule: WarningSignExclusivity
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.10031418824406407
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 22.658928082693016
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 22.658928082693016
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 22.658928082693016
                 params: 
                     warning_indices: [21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
                     symbol_indices: [18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42]
             warning_implies_main_white:
                 rule: WarningImpliesMainWhite
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.34548253464570156 
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 29.699882588921547
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 29.699882588921547
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 29.699882588921547
                 params: 
                     warning_indices: [21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
                     main_colour_white: [0]
             warning_implies_border_red:
                 rule: WarningImpliesBorderRed
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.4558258649599799
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 15.405865781987531
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 15.405865781987531
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 15.405865781987531
                 params: 
                     warning_indices: [21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
                     border_red_index: [5]
