--- a/files/configs/GTSRB_CBM_config_optimalV2.yaml
+++ b/files/configs/GTSRB_CBM_config_optimalV2.yaml
@@ -1,3 +1,4 @@
+# this is from trial 167 in the optuna search trials
 seed: 42
 device: cuda
 device_no: 0
@@ -17,11 +18,11 @@ dataset:
 concept_predictor:
     log_dir: logs
     checkpoint_dir: models
-    lr: 0.001
+    lr: 0.004265079537510653
     epochs: 30
     lr_step: 10
     lr_gamma: 0.5
-    early_stopping_patience: 3
+    early_stopping_patience: 5
     momentum: 0.9
     weight_decay: 5e-4
     freeze: False
@@ -37,203 +38,203 @@ concept_predictor:
         rules:
             at_most_one_border_colour:
                 rule: AtMostOneBorderColour
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.2576769354228365
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 8.56564391772235
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 8.56564391772235
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 8.56564391772235
                 params: 
                     border_colour_indices: [4,5]
             exactly_one_main_colour:
                 rule: ExactlyOneMainColour
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.2387245601427413
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 26.617468561281555
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 26.617468561281555
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 26.617468561281555
                 params: 
                     main_colour_indices: [0,1,2,3]
             exactly_one_shape:
                 rule: ExactlyOneShape
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.03914418548169125
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 0.2842189817000858
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 10.998170553986492
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 10.998170553986492
                 params: 
                     shape_indices: [6,7,8,9]
             between_two_and_three_numbers:
                 rule: BetweenTwoAndThreeNumbers
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.31279329559293095
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 17.482155861549234
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 17.482155861549234
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 17.482155861549234
                 params: 
                     number_indices: [10,11,12,13,14,15,16,17]
             at_most_one_warning:
                 rule: AtMostOneWarning
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.3063142482226824
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 19.15396933962223
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 19.15396933962223
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 19.15396933962223
                 params: 
                     warning_indices: [21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
             no_symbols_exactly_two_colours:
                 rule: NoSymbolsExactlyTwoColours
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.2895414776574898
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 17.501299790428785
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 17.501299790428785
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 17.501299790428785
                 params: 
                     symbol_indices: [18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42]
                     colour_indices: [0, 1, 2, 3, 4, 5]
             warning_sign_exclusivity:
                 rule: WarningSignExclusivity
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.11778023248522008
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 14.96128174875166
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 14.96128174875166
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 14.96128174875166
                 params: 
                     warning_indices: [21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
                     symbol_indices: [18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42]
             warning_implies_main_white:
                 rule: WarningImpliesMainWhite
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.3918902318754864
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 12.10407978009075
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 12.10407978009075
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 12.10407978009075
                 params: 
                     warning_indices: [21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
                     main_colour_white: [0]
             warning_implies_border_red:
                 rule: WarningImpliesBorderRed
-                fuzzy_lambda: 1 
+                fuzzy_lambda: 0.27575612466849975
                 operators:
                     t_norm:
                         class_name: yager_t_norm
                         params:
-                            p: 1.0
+                            p: 11.444872821847666
                             eps: 1e-6
                     t_conorm:
                         class_name: yager_t_conorm
                         params:
-                            p: 1.0
+                            p: 11.444872821847666
                             eps: 1e-6
                     a_aggregation:
                         class_name: product_a_aggregation
                     e_aggregation:
                         class_name: generalized_mean_e_aggregation
                         params:
-                            p: 1.0
+                            p: 11.444872821847666
                 params: 
                     warning_indices: [21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
                     border_red_index: [5]
