--- a/files/configs/cifar10_config.yaml
+++ b/files/configs/cifar10_config.yaml
@@ -2,7 +2,7 @@ seed: 42
 device: cuda
 device_no: 1
 print_freq: 30
-log_dir: "runs/default"
+output_dir: experiments
 dataset:
     name: cifar10
     n_labels: 10
@@ -11,8 +11,9 @@ dataset:
     shuffle_dataset: True
     pin_memory: True
     data_path: /vol/home-vol2/se/costajoa/Dokumente/data/raw
-    val_split: 0.8
+    val_split: 0.2
 training:
+    log_dir: logs
     lr: 0.001
     epochs: 10
     lr_step: 10
@@ -20,7 +21,9 @@ training:
     early_stopping_patience: 15
     momentum: 0.9
     weight_decay: 5e-4
-    checkpoint_dir: "/vol/home-vol2/se/costajoa/Dokumente/mnn_cs/files/models"
+    freeze: False
+    pretrained_weights: null
+    checkpoint_dir: models
     criterion: cross_entropy
     optimizer: sgd
     scheduler: cosine_annealing
