Refactor model trainers and configuration loading
- Removed unused `experiment_id` parameter from `CBMConceptPredictorTrainer` and `CBMLabelPredictorTrainer` constructors.
- Updated `predicted` calculation in `CBMConceptPredictorTrainer` to directly use boolean values instead of converting to long.
- Added print statement to display the length of the dataset in `CBMConceptPredictorTrainer`.
- Improved progress bar updates in both `CBMConceptPredictorTrainer` and `CBMLabelPredictorTrainer` during evaluation.
- Changed logging of classification reports to print statements for both concept and label predictors.
- Updated configuration file path in `train_cbm.py` to use the latest configuration file.

--- a/files/configs/GTSRB_Baseline_config.yaml
+++ b/files/configs/GTSRB_Baseline_config.yaml
@@ -7,15 +7,15 @@ dataset:
     name: gtsrb
     n_labels: 43
     batch_size: 64
-    num_workers: 4
+    num_workers: 0
     shuffle_dataset: True
     pin_memory: True
-    data_path: ../data/raw/GTSRB/converted
+    data_path: data/raw/GTSRB/converted
     val_split: 0.2
 training:
     log_dir: logs
-    lr: 0.001
-    epochs: 1
+    lr: 0.00038368532117943145
+    epochs: 15
     lr_step: 10
     lr_gamma: 0.5
     early_stopping_patience: 4
