--- a/files/configs/GTSRB_Baseline_config_loading.yaml
+++ b/files/configs/GTSRB_Baseline_config_loading.yaml
@@ -1,31 +1,31 @@
 seed: 42
 device: cuda
-device_no: 1
+device_no: 0
 print_freq: 30
 output_dir: experiments
 dataset:
-    name: cifar10
-    n_labels: 10
-    batch_size: 128
-    num_workers: 4
+    name: gtsrb
+    n_labels: 43
+    batch_size: 64
+    num_workers: 0
     shuffle_dataset: True
     pin_memory: True
-    data_path: /vol/home-vol2/se/costajoa/Dokumente/data/raw
+    data_path: ../data/raw/GTSRB/converted
     val_split: 0.2
 training:
     log_dir: logs
-    lr: 0.001
-    epochs: 10
+    lr: 0.0001041377112356016
+    epochs: 15
     lr_step: 10
     lr_gamma: 0.5
-    early_stopping_patience: 15
+    early_stopping_patience: 4
     momentum: 0.9
     weight_decay: 5e-4
-    freeze: False
+    freeze: True
     pretrained_weights: null
     checkpoint_dir: models
     criterion: cross_entropy
-    optimizer: sgd
+    optimizer: adamw
     scheduler: cosine_annealing
     scheduler_params: 
         T_max: 10
