--- a/files/configs/RQ1_GTSRB_REQAWARE_config.yaml
+++ b/files/configs/RQ1_GTSRB_REQAWARE_config.yaml
@@ -3,7 +3,7 @@ seed: 42
 device: cuda
 device_no: 1
 print_freq: 30
-output_dir: experiments_reqaware
+output_dir: experiments/RQ/reqaware
 dataset:
     name: gtsrb
     n_labels: 43
@@ -19,7 +19,7 @@ concept_predictor:
     log_dir: logs
     checkpoint_dir: models
     lr: 0.0001
-    epochs: 30
+    epochs: 1
     lr_step: 10
     lr_gamma: 0.5
     early_stopping_patience: 5
