--- a/files/configs/RQ1_GTSRB_VANILLA_CBM_config.yaml
+++ b/files/configs/RQ1_GTSRB_VANILLA_CBM_config.yaml
@@ -2,7 +2,7 @@ seed: 42
 device: cuda
 device_no: 2
 print_freq: 30
-output_dir: experiments_vanilla_cbm
+output_dir: experiments/RQ/vanilla_cbm
 dataset:
     name: gtsrb
     n_labels: 43
@@ -18,7 +18,7 @@ concept_predictor:
     log_dir: logs
     checkpoint_dir: models
     lr: 0.0001
-    epochs: 30
+    epochs: 1
     lr_step: 10
     lr_gamma: 0.5
     early_stopping_patience: 5
